--- a/src/app.css
+++ b/src/app.css
@@ -1,7 +1,9 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
-
+:root{
+  margin: 0px;
+}
 body::-webkit-scrollbar {
   width: 0.5em;
 }
